# xsql

./: .gitignore  README.md  pyproject.toml
carpenter/: dbt_project.yml
carpenter/macros/: death_rate.sql  generate_schema_names.sql
carpenter/models/: source.yml
carpenter/models/covid_marts/: dim_countries.sql  fct_monthly_confirmed.sql  fct_monthly_death_rate.sql
carpenter/models/covid_staging/: stg_country.yml  stg_prepared_source.sql  stg_prepared_source.yml
carpenter/models/marts/: customers.yml  order_items.yml  orders.yml  products.yml  supplies.yml
carpenter/models/staging/: source.yml  stg_country.sql  stg_customers.sql  stg_locations.sql  stg_locations.yml  stg_monthly_deaths.sql  stg_monthly_deaths.yml  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
carpenter/seeds/: raw_customers.csv
carpenter/snapshots/: scd2_country.sql  snapshot_customers.sql  snapshot_locations.sql  snapshot_order_items.sql  snapshot_orders.sql  snapshot_products.sql  snapshot_supplies.sql
dags/: historical_storage.py  jaffel_etl.py
dags/includes/marts/: customers.sh  order_items.sh  orders.sh  products.sh  supplies.sh
dags/includes/snapshots/: snapshots.sh
dags/includes/staging/: customers.sh  locations.sh  order_items.sh  orders.sh  products.sh  supplies.sh
etc/: README.md  airflow-scheduler.service  airflow-webserver.service  jupyter-server.service
